# souffle

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  _abstract_aggregate_8h.html  _abstract_aggregate_8h__dep__incl.map  _abstract_aggregate_8h__dep__incl.md5  _abstract_aggregate_8h__incl.map  _abstract_aggregate_8h__incl.md5  _abstract_aggregate_8h_source.html  _abstract_choice_8h.html  _abstract_choice_8h__dep__incl.map  _abstract_choice_8h__dep__incl.md5  _abstract_choice_8h__incl.map  _abstract_choice_8h__incl.md5  _abstract_choice_8h_source.html  _abstract_conditional_8h.html  _abstract_conditional_8h__dep__incl.map  _abstract_conditional_8h__dep__incl.md5  _abstract_conditional_8h__incl.map  _abstract_conditional_8h__incl.md5  _abstract_conditional_8h_source.html  _abstract_existence_check_8h.html  _abstract_existence_check_8h__dep__incl.map  _abstract_existence_check_8h__dep__incl.md5  _abstract_existence_check_8h__incl.map  _abstract_existence_check_8h__incl.md5  _abstract_existence_check_8h_source.html  _abstract_log_8h.html  _abstract_log_8h__dep__incl.map  _abstract_log_8h__dep__incl.md5  _abstract_log_8h__incl.map  _abstract_log_8h__incl.md5  _abstract_log_8h_source.html  _abstract_operator_8h.html  _abstract_operator_8h__dep__incl.map  _abstract_operator_8h__dep__incl.md5  _abstract_operator_8h__incl.map  _abstract_operator_8h__incl.md5  (+7386 more)
src/: CMakeLists.txt  FunctorOps.cpp  FunctorOps.h  GetOptLong.cpp  Global.cpp  Global.h  GraphUtils.h  LogStatement.h  Makefile.am  RelationTag.h  TranslationUnitBase.h  main.cpp  souffle-compile.in  souffle-compile.rb.template  souffle-compile.template.py
src/ast/: Aggregator.cpp  Aggregator.h  AlgebraicDataType.cpp  AlgebraicDataType.h  AliasType.cpp  AliasType.h  Atom.cpp  Atom.h  Attribute.cpp  Attribute.h  BinaryConstraint.cpp  BinaryConstraint.h  BooleanConstraint.cpp  BooleanConstraint.h  BranchDeclaration.cpp  BranchDeclaration.h  BranchInit.cpp  BranchInit.h  BranchType.cpp  BranchType.h  Clause.cpp  Clause.h  Component.cpp  Component.h  ComponentInit.cpp  ComponentInit.h  ComponentType.cpp  ComponentType.h  Constant.cpp  Constant.h  Constraint.h  Counter.cpp  Counter.h  Directive.cpp  Directive.h  ExecutionOrder.cpp  ExecutionOrder.h  ExecutionPlan.cpp  ExecutionPlan.h  FunctionalConstraint.cpp  (+46 more)
src/ast/analysis/: Aggregate.cpp  Aggregate.h  ClauseNormalisation.cpp  ClauseNormalisation.h  ComponentLookup.cpp  ComponentLookup.h  Constraint.h  Functor.cpp  Functor.h  Ground.cpp  IOType.cpp  IOType.h  PolymorphicObjects.cpp  PolymorphicObjects.h  PrecedenceGraph.cpp  PrecedenceGraph.h  ProfileUse.cpp  ProfileUse.h  RecursiveClauses.cpp  RecursiveClauses.h  RedundantRelations.cpp  RedundantRelations.h  RelationDetailCache.cpp  RelationDetailCache.h  RelationSchedule.cpp  RelationSchedule.h  SCCGraph.cpp  SCCGraph.h  SumTypeBranches.cpp  SumTypeBranches.h  TopologicallySortedSCCGraph.cpp  TopologicallySortedSCCGraph.h  Type.cpp  Type.h  TypeConstraints.cpp  TypeConstraints.h  TypeEnvironment.cpp  TypeEnvironment.h  TypeSystem.cpp  TypeSystem.h  (+2 more)
src/ast/tests/: CMakeLists.txt  ast_parser_utils_test.cpp  ast_print_test.cpp  ast_program_test.cpp  ast_transformers_test.cpp  ast_utils_test.cpp  type_system_test.cpp
src/ast/transform/: ADTtoRecords.cpp  ADTtoRecords.h  AddNullariesToAtomlessAggregates.cpp  AddNullariesToAtomlessAggregates.h  ComponentChecker.cpp  ComponentChecker.h  ComponentInstantiation.cpp  ComponentInstantiation.h  Conditional.h  DebugReporter.h  ExecutionPlanChecker.cpp  ExecutionPlanChecker.h  ExpandEqrels.cpp  ExpandEqrels.h  Fixpoint.h  FoldAnonymousRecords.cpp  FoldAnonymousRecords.h  GroundWitnesses.cpp  GroundWitnesses.h  GroundedTermsChecker.h  (+63 more)
src/ast2ram/: AstToRamTranslator.cpp  AstToRamTranslator.h  ClauseTranslator.cpp  ClauseTranslator.h  ConstraintTranslator.cpp  ConstraintTranslator.h  Location.h  ProvenanceClauseTranslator.cpp  ProvenanceClauseTranslator.h  ProvenanceSubproofGenerator.cpp  ProvenanceSubproofGenerator.h  ProvenanceTranslator.cpp  ProvenanceTranslator.h  TranslationStrategy.h  UnitTranslator.h  ValueIndex.cpp  ValueIndex.h  ValueTranslator.cpp  ValueTranslator.h
src/interpreter/: BTreeDeleteIndex.cpp  BTreeIndex.cpp  BrieIndex.cpp  Context.h  Engine.cpp  Engine.h  EqrelIndex.cpp  Generator.cpp  Generator.h  Index.h  InterpreterBTreeIndex.cpp  InterpreterBrieIndex.cpp  InterpreterContext.h  InterpreterEngine.cpp  InterpreterEngine.h  InterpreterEqrelIndex.cpp  InterpreterGenerator.h  InterpreterIndex.cpp  InterpreterIndex.h  InterpreterIndirectIndex.cpp  InterpreterNode.h  InterpreterProgInterface.h  InterpreterProvenanceIndex.cpp  InterpreterRelation.cpp  InterpreterRelation.h  InterpreterUtil.h  Node.h  ProgInterface.h  ProvenanceIndex.cpp  Relation.h  Util.h  ViewContext.h
src/parser/: Helper.h  ParserDriver.cpp  ParserDriver.h  ParserUtils.cpp  ParserUtils.h  SrcLocation.cpp  SrcLocation.h  parser.yy  scanner.ll
src/ram/: AbstractAggregate.h  AbstractChoice.h  AbstractConditional.h  AbstractExistenceCheck.h  AbstractIfExists.h  AbstractLog.h  AbstractOperator.h  Aggregate.h  AutoIncrement.h  BinRelationStatement.h  Break.h  Call.h  Choice.h  Clear.h  Conjunction.h  Constant.h  Constraint.h  CountUniqueKeys.h  DebugInfo.h  EmptinessCheck.h  Erase.h  ExistenceCheck.h  Exit.h  Expression.h  Extend.h  FDExistenceCheck.h  False.h  Filter.h  FloatConstant.h  GuardedInsert.h  GuardedProject.h  IO.h  IfExists.h  IndexAggregate.h  IndexChoice.h  IndexIfExists.h  IndexOperation.h  IndexScan.h  Insert.h  IntrinsicOperator.h  (+45 more)
src/reports/: ErrorReport.h
src/synthesiser/: Relation.cpp  Relation.h  Synthesiser.cpp  Synthesiser.h
src/tests/: CMakeLists.txt  binary_relation_test.cpp  brie_test.cpp  btree_multiset_test.cpp  btree_set_test.cpp  disjoint_set_property_test.cpp  eqrel_datastructure_test.cpp  flyweight_test.cpp  getopt_long_test.cpp  graph_utils_test.cpp  parallel_utils_test.cpp  profile_util_test.cpp  record_table_test.cpp  symbol_table_test.cpp  test.h  util_test.cpp  visitor_test.cpp
tests/example/: CMakeLists.txt
tests/interface/: CMakeLists.txt
(+425 files in other folders)
